--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "typescript": "5.1.3"
   },
   "devDependencies": {
+    "@types/bootstrap": "^5.2.6",
     "@types/react-lottie": "^1.2.6"
   }
 }
